--- a/.eslintrc
+++ b/.eslintrc
@@ -3,7 +3,9 @@
     "extends": ["airbnb"],
     "plugins": ["react", "jsx-a11y", "import"],
     "rules": {
-        "react/jsx-filename-extension": 0
+        "react/jsx-filename-extension": 0,
+        "react/destructuring-assignment": 0,
+        "react/jsx-indent": 0
     },
     "env": {
         "browser": true,
