--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
         "css-loader": "^1.0.0",
         "eslint": "^5.6.1",
         "eslint-config-airbnb": "^17.1.0",
+        "eslint-config-prettier": "^3.1.0",
         "eslint-plugin-import": "^2.14.0",
         "eslint-plugin-jsx-a11y": "^6.1.2",
         "eslint-plugin-react": "^7.11.1",
@@ -74,5 +75,11 @@
     "dependencies": {
         "react": "^16.4.2",
         "react-dom": "^16.4.2"
-    }
+    },
+    "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
